📦️ build(package)!: rename package and bump to v2.0.0
- The package name has been changed from `pyqt-toast-enhanced` to `pyqttoast-enhanced`.
- This update is reflected across all relevant configuration files (`pyproject.toml`, `setup.py`), documentation (`README.md`), and release scripts (`publish.py`, `docs/RELEASE_CHECKLIST.md`).
- The project version has been incremented to `2.0.0` to reflect this significant change and potential breaking impact due to the package name alteration.
- The author's email has also been updated in `pyproject.toml`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pyqt-toast-enhanced"
-version = "1.4.0"
+name = "pyqttoast-enhanced"
+version = "2.0.0"
 authors = [
-    {name = "CassianVale", email = "cassianvale4890@linux.do"},
+    {name = "CassianVale", email = "z1430066373@gmail.com"},
 ]
 description = "Enhanced fork of pyqt-toast-notification with additional features and improvements"
 readme = "README.md"
